Fix header links legibility

--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -117,6 +117,9 @@ header .info .icon{ float: left; font-size: 30px; }
 
 header .info .right-area{ margin-left: 45px; }
 
+header a{ text-decoration: none; color: #ffffff; }
+header a:hover{ text-decoration: none; color: #fcc96b; }
+
 header .downlad-btn{ padding: 15px 30px; border-radius: 4px; float: right; margin-top: 30px;
 	box-shadow: inset 0 0px 4px rgba(0,0,0,.3); background: #FFAD01; color: #fff; 
 	-webkit-transition: all .2s ease; transition: all .2s ease; }
